--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "samflow-sdk",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,9 +15,11 @@
   "dependencies": {
     "kafkajs": "^2.2.0",
     "redis": "^4.3.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.9.1"
   }
 }
