--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "/dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register test/**/test.ts"
   },
   "author": "Narayanan Chandran",
   "license": "MIT",
@@ -19,7 +19,13 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.3",
+    "@types/chai-as-promised": "^7.1.5",
+    "@types/mocha": "^10.0.0",
     "@types/uuid": "^8.3.4",
+    "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^10.0.0",
     "ts-node": "^10.9.1"
   }
 }
