trigger for ts files

--- a/.github/workflows/onPR.yml
+++ b/.github/workflows/onPR.yml
@@ -4,6 +4,8 @@ on:
     types: [opened, edited]
     branches:
       - 'master'
+    path:
+      - "**.ts"
 jobs:
   build:
     runs-on: ubuntu-latest
