--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "/dist"
   ],
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/test.ts"
+    "test": "mocha -r ts-node/register test/**/test.ts --exit"
   },
   "author": "Narayanan Chandran",
   "license": "MIT",
