--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Narayanan Chandran",
   "license": "MIT",
   "dependencies": {
+    "@kafkajs/confluent-schema-registry": "^3.3.0",
     "kafkajs": "^2.2.0",
     "redis": "^4.3.1",
     "typescript": "^4.7.4",
