--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "/dist"
   ],
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/test.ts --exit"
+    "test": "nyc mocha -r ts-node/register test/**/*.test.ts --exit"
   },
   "author": "Narayanan Chandran",
   "license": "MIT",
@@ -23,10 +23,14 @@
     "@types/chai": "^4.3.3",
     "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.17",
+    "@types/test-console": "^2.0.0",
     "@types/uuid": "^8.3.4",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "test-console": "^2.0.0",
     "ts-node": "^10.9.1"
   }
 }
